input-control z-index fix

--- a/css/flagwaver-ui.css
+++ b/css/flagwaver-ui.css
@@ -257,6 +257,10 @@ p, a {
 .input-control-group > .input-btn:focus,
 .input-control-group > .input-btn:active,
 .input-control-group > .input-btn.active,
+.input-btn-group > .input-control:hover,
+.input-btn-group > .input-control:focus,
+.input-btn-group > .input-control:active,
+.input-btn-group > .input-control.active,
 .input-btn-group > .input-btn:hover,
 .input-btn-group > .input-btn:focus,
 .input-btn-group > .input-btn:active,
